--- a/Jupyter Notebook/Coursera/Data analysis with python/model-evaluation-and-refinement.ipynb
+++ b/Jupyter Notebook/Coursera/Data analysis with python/model-evaluation-and-refinement.ipynb
@@ -1408,7 +1408,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4b78b0e3b864884a6178716253c6b19",
+       "model_id": "dd2ad14363804bb29d36a2eeb1f4f885",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1780,7 +1780,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x141938b0>"
+       "<matplotlib.legend.Legend at 0x1464f9b0>"
       ]
      },
      "execution_count": 51,
