--- a/Python Practicals Sem 6/Set 6.ipynb
+++ b/Python Practicals Sem 6/Set 6.ipynb
@@ -186,9 +186,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "amber-memorial",
+   "metadata": {},
+   "source": [
+    "#### 6 Write a python program to find Armstrong numbers in a specific range using map\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "baking-hours",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Range : 10000\n",
+      "[153, 370, 371, 407, 1634, 8208, 9474]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def Armstrong(n):\n",
+    "    temp = n\n",
+    "    sum = 0\n",
+    "    order = len(str(n))\n",
+    "\n",
+    "    while temp>0:\n",
+    "        digit = int(temp%10)\n",
+    "        sum += digit**order\n",
+    "        temp = int(temp/10)\n",
+    "\n",
+    "    if sum == n:\n",
+    "        return n\n",
+    "\n",
+    "n = int(input(\"Enter Range : \"))\n",
+    "\n",
+    "d = list(map(Armstrong,range(10,n)))\n",
+    "    \n",
+    "c = list(filter(lambda x:x != None,d))\n",
+    "\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "critical-satellite",
+   "metadata": {},
+   "source": [
+    "#### 7 Write a python program to apply two functions (square and cube) simultaneously on a specific range using map."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "involved-tucson",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 0], [1, 1, 1], [2, 4, 8], [3, 9, 27], [4, 16, 64], [5, 25, 125], [6, 36, 216], [7, 49, 343], [8, 64, 512], [9, 81, 729]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func(n):\n",
+    "    return [n,n**2,n**3]\n",
+    "\n",
+    "n = 10\n",
+    "\n",
+    "a = list(map(func,range(10)))\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "built-somalia",
+   "metadata": {},
+   "source": [
+    "#### 8 Write python programs using (i) map/filter and function (ii) map/filter and lambda (iii) list comprehension\n",
+    "##### • Create a list to store the cube of all the elements in a given list.\n",
+    "##### • Create a list of equivalent Celsius degree from Fahrenheit.\n",
+    "##### • Create a list that stores only positive numbers from given list.\n",
+    "##### • Create a list that stores only alphabets from given list"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "signed-muscle",
+   "id": "owned-vietnam",
    "metadata": {},
    "outputs": [],
    "source": []
